<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_feed"
            android:icon="@drawable/nav_feed"
            android:title="@string/title_feed"/>
    <item
            android:id="@+id/navigation_message"
            android:icon="@drawable/nav_message"
            android:title="@string/title_messages"/>

    <item
            android:id="@+id/navigation_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/title_cart"/>
    <item
            android:id="@+id/navigation_account"
            android:icon="@drawable/nav_account"
            android:title="@string/title_account"/>

</menu>
